# hr-payroll-sync-platform

./: README.md  hr_agent.py  hr_mcp_server.py  main.py  orchestrator.py  payroll_agent.py  payroll_mcp_server.py  pyproject.toml
