[project]
name = "employee-sync-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.3.9",
    "langchain-mcp-adapters>=0.3.0",
    "langchain-openai>=1.3.2",
    "mcp>=1.28.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
]
